// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayPanel renders 1`] = `
<div>
  <div
    class="panel"
    role="tablist"
  >
    <div
      class="panel-header"
    >
      <span
        class="panel-title"
      >
        Display Title
      </span>
    </div>
    <div
      class="panel-header"
    >
      Header!
    </div>
    <div
      class="panel-body"
    >
      Body!
    </div>
    <div
      class="panel-footer"
    >
      Footer!
    </div>
  </div>
</div>
`;

exports[`ClayPanel renders with custom displayTitle 1`] = `
<div>
  <div
    class="panel panel-secondary"
    role="tablist"
  >
    <button
      aria-expanded="false"
      class="panel-header panel-header-link collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
      role="tab"
      type="button"
    >
      <div>
        <h3>
          Custom Panel Title
        </h3>
      </div>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            xlink:href="/foo/bar#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            xlink:href="/foo/bar#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      class="panel-collapse collapse"
      role="tabpanel"
    >
      <div
        class="panel-header"
      >
        Header!
      </div>
      <div
        class="panel-body"
      >
        Body!
      </div>
      <div
        class="panel-footer"
      >
        Footer!
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayPanel renders with different displayType 1`] = `
<div>
  <div
    class="panel panel-secondary"
    role="tablist"
  >
    <div
      class="panel-header"
    >
      <span
        class="panel-title"
      >
        Display Title
      </span>
    </div>
    <div
      class="panel-header"
    >
      Header!
    </div>
    <div
      class="panel-body"
    >
      Body!
    </div>
    <div
      class="panel-footer"
    >
      Footer!
    </div>
  </div>
</div>
`;

exports[`ClayPanel renders with multiple panels 1`] = `
<div>
  <div
    aria-orientation="vertical"
    class="panel-group"
    role="tablist"
  >
    <div
      class="panel"
      role="tablist"
    >
      <div
        class="panel-header"
      >
        <span
          class="panel-title"
        >
          Display Title
        </span>
      </div>
      <div
        class="panel-body"
      >
        Body!
      </div>
    </div>
    <div
      class="panel"
      role="tablist"
    >
      <div
        class="panel-header"
      >
        <span
          class="panel-title"
        >
          Display Title
        </span>
      </div>
      <div
        class="panel-body"
      >
        Body!
      </div>
    </div>
    <div
      class="panel"
      role="tablist"
    >
      <button
        aria-expanded="false"
        class="panel-header panel-header-link collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
        role="tab"
        type="button"
      >
        <span
          class="panel-title"
        >
          Display Title
        </span>
        <span
          class="collapse-icon-closed"
        >
          <svg
            class="lexicon-icon lexicon-icon-angle-right"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#angle-right"
            />
          </svg>
        </span>
        <span
          class="collapse-icon-open"
        >
          <svg
            class="lexicon-icon lexicon-icon-angle-down"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#angle-down"
            />
          </svg>
        </span>
      </button>
      <div
        class="panel-collapse collapse"
        role="tabpanel"
      >
        <div
          class="panel-body"
        >
          Body!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayPanel renders without displayTitle 1`] = `
<div>
  <div
    class="panel panel-secondary"
    role="tablist"
  >
    <button
      aria-expanded="false"
      class="panel-header panel-header-link collapse-icon collapse-icon-middle collapsed btn btn-unstyled"
      role="tab"
      type="button"
    >
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            xlink:href="/foo/bar#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            xlink:href="/foo/bar#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      class="panel-collapse collapse"
      role="tabpanel"
    >
      <div
        class="panel-header"
      >
        Header!
      </div>
      <div
        class="panel-body"
      >
        Body!
      </div>
      <div
        class="panel-footer"
      >
        Footer!
      </div>
    </div>
  </div>
</div>
`;
